Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo-dep
  name: demo-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-dep
    spec:
      containers:
      - image: gcr.io/zaina-348512/demo-app
        name: demo
        ports:
        - containerPort: 8000
        resources: {}
status: {}
