Kubernetes/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis-pod
  name: redis-pod
spec:
  containers:
  - image: gcr.io/zaina-348512/redis
    name: redis-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
