Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: http-ingress
spec:
  defaultBackend:
    service:
      name: demo-dep
      port:
        number: 8000
status:
  loadBalancer: {}
